Added email on user creation.  Fixed some bugs with user creation.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,3 +21,5 @@ centralcontroller.cloudservices.error.callback.invalid = Callback URL is invalid
 centralcontroller.cloudservices.error.request.format.invalid = The request was not properly formatted.
 centralcontroller.cloudservices.error.login = Error during login process.
 centralcontroller.user.controller.error.user.id.mismatch = User ID in update body did not match URL.
+centralcontroller.user.controller.registration.email.subject = New CloudBackEnc Account
+centralcontroller.user.controller.registration.email.body = A new account was successfully created for user {0}.
