Secured some rest endpoints that were not secured. Some general code cleanup.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,6 +19,8 @@ centralcontroller.cloudservices.error.uuid.invalid.format = UUID in url is not a
 centralcontroller.cloudservices.error.callback.invalid = Callback URL is invalid.  This probably isn't an issue if a callback is never required for this service.
 centralcontroller.cloudservices.error.request.format.invalid = The request was not properly formatted.
 centralcontroller.cloudservices.error.login = Error during login process.
-centralcontroller.user.controller.error.user.id.mismatch = User ID in update body did not match URL.
-centralcontroller.user.controller.registration.email.subject = New CloudBackEnc Account
-centralcontroller.user.controller.registration.email.body = A new account was successfully created for user {0}.
+centralcontroller.usercontroller.error.user.id.mismatch = User ID in update body did not match URL.
+centralcontroller.usercontroller.registration.email.subject = New {0} Account
+centralcontroller.usercontroller.registration.email.body = A new account was successfully created for user {0}.
+centralcontroller.usercontroller.update.email.subject = {0} Account Updated
+centralcontroller.usercontroller.update.email.body = A change has been made to the account for user {0}. If you did not make this change, please contact your {1} administrator for assistance.
